--- a/package.yaml
+++ b/package.yaml
@@ -13,6 +13,7 @@ tests:
 copyright: 2019 Author name here
 maintainer: example@example.com
 dependencies:
+- lens
 - binary
 - bytestring
 - base >= 4.7 && < 5
